maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: ')' expected but 'if' found.
	if(estFaceMur() && getY == 0){
        ^